force-app/main/default/objects/MUSW__Planning_Application__c/MUSW__Planning_Application__c.object-meta.xml
<CustomObject>
    <customHelp>MUSW__HelpInterface</customHelp>
    <description>Planning Applications eg. Site Plan</description>
    <label>Application.</label>
    <nameField>
        <displayFormat>A-{0000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applications.</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>