force-app/main/default/objects/MUSW__Planning_Application__c/fields/IsClosed__c.field-meta.xml
<CustomField>
    <fullName>IsClosed__c</fullName>
    <formula>IF(OR(NOT(ISNULL(  MUSW__Approval_Date__c  )), NOT(ISNULL( MUSW__Completion_Date__c  )),NOT(ISNULL( MUSW__Decision_Date__c ))),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>