force-app/main/default/objects/MUSW__Planning_Application__c/fields/Iss_Track_No__c.field-meta.xml
<CustomField>
    <fullName>Iss_Track_No__c</fullName>
    <formula>IF( OR(ISNULL(MUSW__Tracking_Number__c), MUSW__Tracking_Number__c = ""), HYPERLINK("../"&amp;Id, Name, "_parent") &amp; " " &amp; HYPERLINK("/servlet/servlet.Integration?lid=01NF00000011RbX&amp;Id=" &amp; Id &amp; "&amp;ic=1&amp;object=MUSW__Planning_Application__c&amp;setStatus=Under%20Review&amp;statusField=MUSW__Status__c&amp;type="&amp; CASE( MUSW__Type__c , 
"Conditional Use Permit", "CUP", 
"Variance", "VAR", 
"DEFAULT" )&amp;"&amp;year="&amp; TEXT(YEAR(TODAY()))&amp;"&amp;month="&amp; TEXT(MONTH(TODAY()))&amp;"&amp;day="&amp; TEXT(DAY(TODAY())), "(Issue)", "_parent"),HYPERLINK( "../"&amp;Id , MUSW__Tracking_Number__c,"_parent" ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Iss Appl. No.</label>
    <type>Text</type>
</CustomField>