force-app/main/default/objects/MUSW__Planning_Application__c/fields/MUSW__Applicant__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select if you want this account available also as a Contact. Eg. A person having an email.</inlineHelpText>
    <label>Applicant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>