force-app/main/default/objects/MUSW__Planning_Application__c/fields/MUSW__Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Approval_Date__c</fullName>
    <label>Approval Date</label>
    <type>Date</type>
</CustomField>