force-app/main/default/objects/MUSW__Planning_Application__c/fields/MUSW__Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Completion_Date__c</fullName>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>