force-app/main/default/objects/MUSW__Planning_Application__c/fields/MUSW__Description__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Description__c</fullName>
    <inlineHelpText>for use on public notices, and meeting agendas</inlineHelpText>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>