force-app/main/default/objects/MUSW__Planning_Application__c/fields/MUSW__Developer__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Developer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Developer</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Planning_Applications_Developed</relationshipName>
    <type>Lookup</type>
</CustomField>