force-app/main/default/objects/MUSW__Planning_Application__c/fields/MUSW__Due_Date__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Due_Date__c</fullName>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>