force-app/main/default/objects/MUSW__Planning_Application__c/fields/Short_Description__c.field-meta.xml
<CustomField>
    <fullName>Short_Description__c</fullName>
    <inlineHelpText>Overview for use on Public Notices, Meeting Agendas, etc.</inlineHelpText>
    <label>Short Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>