force-app/main/default/objects/MUSW__Planning_Application__c/listViews/MUSW__All.listView-meta.xml
<ListView>
    <fullName>MUSW__All</fullName>
    <columns>Iss_Track_No__c</columns>
    <columns>MUSW__Project__c</columns>
    <columns>MUSW__Type__c</columns>
    <columns>MUSW__Applicant__c</columns>
    <columns>MUSW__Due_Date__c</columns>
    <columns>MUSW__Status__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>